# selinux

./: CONTRIBUTING.md  README.md  SECURITY.md
.github/workflows/: check-format.yml  run_tests.yml
checkpolicy/: Makefile  policy_define.c
checkpolicy/test/: dismod.c
checkpolicy/tests/: test_checkmodule_negative.sh
libselinux/src/: Makefile  audit2why.c  avc.c  avc_internal.h  canonicalize_context.c  compute_user.c  get_default_type.c  init.c  is_customizable_type.c  label.c  label_db.c  label_file.c  libselinux.map  load_policy.c  mapping.c  matchpathcon.c  policy.h  pyproject.toml  query_user_context.c  regex.c  selinux_internal.h  selinux_restorecon.c  selinuxswig_python.i  sestatus.c  setrans_client.c  seusers.c  stringrep.c  unshare.c  validatetrans.c
libselinux/utils/: .gitignore  getdefaultcon.c  matchpathcon.c  sefcontext_compile.c  selabel_digest.c  unshareselinux.c
libsemanage/src/: direct_api.c  genhomedircon.c  handle.c  semanage_store.c  seusers_local.c  users_base_file.c
libsepol/fuzz/: min_mod.pp  module-package-fuzzer.c
libsepol/src/: assertion.c  expand.c  kernel_to_cil.c  kernel_to_common.c  kernel_to_conf.c  libsepol.map.in  link.c  module_to_cil.c  optimize.c  policydb_public.c  services.c  (+3 more)
policycoreutils/: .gitignore  Makefile
python/sepolicy/: pyproject.toml  setup.py
python/sepolicy/sepolicy/: generate.py
restorecond/: restorecond.c  restorecond.h  utmpwatcher.c  utmpwatcher.h  watch.c
sandbox/: sandbox  sandboxX.sh  seunshare.8  seunshare.c
scripts/: oss-fuzz.sh
secilc/: secilc.c  secilcheck.c
semodule-utils/: Makefile
(+61 files in other folders)
